force-app/main/default/objects/aecm__Capability__c/aecm__Capability__c.object-meta.xml
<CustomObject>
    <description>Container for L3 capability and the most interactive of the capability objects. It is a child to an L2 Capability area. This object has relationships with Capability Pain Points, Solution Designs, Stories, and Processes relating to a specific capability.</description>
    <label>Capability</label>
    <nameField>
        <label>Capability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>