force-app/main/default/objects/aecm__Capability__c/fields/aecm__Area_Capability__c.field-meta.xml
<CustomField>
    <fullName>aecm__Area_Capability__c</fullName>
    <formula>aecm__Capability_Area__r.Name   &amp;&quot; / &quot;&amp;  Name</formula>
    <label>Area &amp; Capability</label>
    <type>Text</type>
</CustomField>