force-app/main/default/objects/aecm__Capability__c/fields/aecm__Business_Value__c.field-meta.xml
<CustomField>
    <fullName>aecm__Business_Value__c</fullName>
    <label>Business Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>