force-app/main/default/objects/aecm__Capability__c/fields/aecm__Capability_Area__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Area__c</fullName>
    <description>Parent capability area.</description>
    <inlineHelpText>Parent of this capability</inlineHelpText>
    <label>Capability Area</label>
    <referenceTo>aecm__Capability_Area__c</referenceTo>
    <relationshipLabel>Capabilities</relationshipLabel>
    <relationshipName>Capabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>