force-app/main/default/objects/aecm__Capability__c/fields/aecm__Capability_Effort__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Effort__c</fullName>
    <inlineHelpText>Total number of effort hours across all processes defined for this capability. Values are in hours and quarters of an hour.</inlineHelpText>
    <label>Capability Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>