force-app/main/default/objects/aecm__Capability__c/fields/aecm__Capability_Effort_Cost_Actual__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Effort_Cost_Actual__c</fullName>
    <inlineHelpText>Total effort cost of this capability based on processes and process steps associated with this capability.</inlineHelpText>
    <label>Capability Effort Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>