force-app/main/default/objects/aecm__Capability__c/fields/aecm__Capability_Resources__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Resources__c</fullName>
    <inlineHelpText>Number of resources involved in this capability, as defined in processes associated to this capability.</inlineHelpText>
    <label>Capability Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>