force-app/main/default/objects/aecm__Capability__c/fields/aecm__Data_set__c.field-meta.xml
<CustomField>
    <fullName>aecm__Data_set__c</fullName>
    <formula>TEXT(aecm__Capability_Area__r.aecm__Data_Set__c)</formula>
    <label>Data set</label>
    <type>Text</type>
</CustomField>