force-app/main/default/objects/aecm__Capability__c/fields/aecm__Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Description__c</fullName>
    <description>DEPRECATED. Replaced with a long text area field.</description>
    <inlineHelpText>Provide a description for this capability that explains its purpose and underlying structures.</inlineHelpText>
    <label>DEPRECATED Description</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>