force-app/main/default/objects/aecm__Capability__c/fields/aecm__Description_Text__c.field-meta.xml
<CustomField>
    <fullName>aecm__Description_Text__c</fullName>
    <inlineHelpText>Provide a description for this capability that explains its purpose and underlying structures.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>