force-app/main/default/objects/aecm__Capability__c/fields/aecm__External_Id__c.field-meta.xml
<CustomField>
    <fullName>aecm__External_Id__c</fullName>
    <description>External id used to aid in efficiently migrating data to customer orgs.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>