force-app/main/default/objects/aecm__Capability__c/fields/aecm__Function__c.field-meta.xml
<CustomField>
    <fullName>aecm__Function__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DEPRECATED Functional Unit</label>
    <referenceTo>aecm__Functional_Unit__c</referenceTo>
    <relationshipLabel>Capabilities</relationshipLabel>
    <relationshipName>Capabilities</relationshipName>
    <type>Lookup</type>
</CustomField>