force-app/main/default/objects/aecm__Capability__c/fields/aecm__Functional_Unit__c.field-meta.xml
<CustomField>
    <fullName>aecm__Functional_Unit__c</fullName>
    <description>Formula Field for Functional Unit</description>
    <formula>aecm__Capability_Area__r.aecm__Capability_Domain__r.aecm__Function__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Functional Unit Name</label>
    <type>Text</type>
</CustomField>