force-app/main/default/objects/aecm__Capability__c/fields/aecm__Improvement_Priority__c.field-meta.xml
<CustomField>
    <fullName>aecm__Improvement_Priority__c</fullName>
    <description>Level of importance to client in respect to best practice for improving a capability or sub capability.</description>
    <inlineHelpText>This measure evaluates the stage of importance and value that an organization places in a given capability or sub capability. Greater value is given based on degree of management, curation, and adoption activities and  behaviors.</inlineHelpText>
    <label>Improvement Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Acknowledged</fullName>
                <default>true</default>
                <label>Not Acknowledged</label>
            </value>
            <value>
                <fullName>Acknowledged Low</fullName>
            </value>
            <value>
                <fullName>Moderate Importance</fullName>
            </value>
            <value>
                <fullName>High Importance</fullName>
            </value>
            <value>
                <fullName>Critical for Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>