force-app/main/default/objects/aecm__Capability__c/fields/aecm__Maturity__c.field-meta.xml
<CustomField>
    <fullName>aecm__Maturity__c</fullName>
    <inlineHelpText>Degree of overall maturity for a given capability or sub capability.</inlineHelpText>
    <label>Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undefined</fullName>
                <default>true</default>
                <label>Undefined</label>
            </value>
            <value>
                <fullName>Defined</fullName>
            </value>
            <value>
                <fullName>Optimizing</fullName>
            </value>
            <value>
                <fullName>Leading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>