force-app/main/default/objects/aecm__Capability__c/fields/aecm__Maturity_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Maturity_Score__c</fullName>
    <description>CASE( Maturity__c, &quot;Undefined&quot;, 0, &quot;Defined&quot;, 1,&quot;Optimizing&quot;,1.5,&quot;Leading&quot;,2,0)</description>
    <formula>IF
(
 AND(aecm__Active__c = True, ISPICKVAL(aecm__Maturity__c, &quot;Undefined&quot;)), 0.5,
IF
(
 AND(aecm__Active__c = True, ISPICKVAL(aecm__Maturity__c, &quot;Defined&quot;)), 1,
IF
(
 AND(aecm__Active__c = True, ISPICKVAL(aecm__Maturity__c, &quot;Optimizing&quot;)), 1.5,
IF
(
 AND(aecm__Active__c = True, ISPICKVAL(aecm__Maturity__c, &quot;Leading&quot;)), 2, 
0
))))






/*original formula: CASE( Maturity__c, &quot;Undefined&quot;, 0.5, &quot;Defined&quot;, 1,&quot;Optimizing&quot;,1.5,&quot;Leading&quot;,2,0)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>based on the value selected in the picklist field &quot;Maturity&quot;.  If undefined = .5, Defined = 1, Optimizing = 1.5, Leading = 2 and the default is 0</inlineHelpText>
    <label>Maturity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>