force-app/main/default/objects/aecm__Capability__c/fields/aecm__Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Overall_Score__c</fullName>
    <formula>/* Used in capability score calculations. */

((aecm__Maturity_Score__c *  2.5 )+ (aecm__Improvement_Priority_Score__c *  1.75 )+( aecm__Proactivity_Index_Score__c *  2 )+( aecm__Strategic_Index_Score__c *  3 ))/4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>((Maturity_Score__c * 2.5 )+ (Improvement_Priority_Score__c * 1.75 )+( Proactivity_Index_Score__c * 2 )+( Strategic_Index_Score__c * 3 ))/4</inlineHelpText>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>