force-app/main/default/objects/aecm__Capability__c/fields/aecm__Overall_Score_History__c.field-meta.xml
<CustomField>
    <fullName>aecm__Overall_Score_History__c</fullName>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>