force-app/main/default/objects/aecm__Capability__c/fields/aecm__Performance__c.field-meta.xml
<CustomField>
    <fullName>aecm__Performance__c</fullName>
    <label>Performance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>