force-app/main/default/objects/aecm__Capability__c/fields/aecm__Proactivity_Index__c.field-meta.xml
<CustomField>
    <fullName>aecm__Proactivity_Index__c</fullName>
    <description>Degree of proactive tendencies, behaviors, and patterns for a capability or sub capability.</description>
    <inlineHelpText>Is the organization staying ahead of issues and demand? This index measures the degree of proactive vs reactive activities and behaviors. Greater value is given to increasingly proactive activities and  behaviors.</inlineHelpText>
    <label>Proactivity Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Acknowledged</fullName>
                <default>true</default>
                <label>Not Acknowledged</label>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
            <value>
                <fullName>Occasionally Proactive</fullName>
            </value>
            <value>
                <fullName>Situationally Proactive</fullName>
            </value>
            <value>
                <fullName>Intentionally Proactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>