force-app/main/default/objects/aecm__Capability__c/fields/aecm__Proactivity_Index_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Proactivity_Index_Score__c</fullName>
    <formula>IF
(
AND(aecm__Active__c = True, ISPICKVAL( aecm__Proactivity_Index__c , &quot;Not Acknowledged&quot;)), 1,
IF
(
AND(aecm__Active__c = True, ISPICKVAL(aecm__Proactivity_Index__c, &quot;Reactive&quot;)), 2,
IF
(
AND(aecm__Active__c = True, ISPICKVAL(aecm__Proactivity_Index__c, &quot;Occasionally Proactive&quot;)), 3,
IF
(
AND(aecm__Active__c = True, ISPICKVAL(aecm__Proactivity_Index__c, &quot;Situationally Proactive&quot;)), 4,
IF
(
AND(aecm__Active__c = True, ISPICKVAL(aecm__Proactivity_Index__c, &quot;Intentionally Proactive&quot;)), 5,
0
)))))

/*CASE( Proactivity_Index__c , &quot;Not Acknowledged&quot;, 1, &quot;Reactive&quot;, 2,&quot;Occasionally Proactive&quot;,3,&quot;Situationally Proactive&quot;,4,&quot;Intentionally Proactive&quot;,5,0)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proactivity Index Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>