force-app/main/default/objects/aecm__Capability__c/fields/aecm__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Short_Description__c</fullName>
    <inlineHelpText>Used to provide a short description for the capability.</inlineHelpText>
    <label>Short Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>