force-app/main/default/objects/aecm__Capability__c/fields/aecm__Status__c.field-meta.xml
<CustomField>
    <fullName>aecm__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>aecm__Maturity_Progression_Status</valueSetName>
    </valueSet>
</CustomField>