force-app/main/default/objects/aecm__Capability__c/fields/aecm__Strategic_Index__c.field-meta.xml
<CustomField>
    <fullName>aecm__Strategic_Index__c</fullName>
    <description>Degree of strategic tendencies, behaviors, and patterns for a capability or sub capability.</description>
    <inlineHelpText>Is the organization thinking ahead? This index measures the degree of strategic vs tactical thinking, activities, and behaviors. Greater value is given to increasingly strategic patterns, activities, and behaviors.</inlineHelpText>
    <label>Strategic Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Acknowledged</fullName>
                <default>true</default>
                <label>Not Acknowledged</label>
            </value>
            <value>
                <fullName>Tactical</fullName>
            </value>
            <value>
                <fullName>Occasionally Strategic</fullName>
            </value>
            <value>
                <fullName>Situationally Strategic</fullName>
            </value>
            <value>
                <fullName>Intentionally Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>