force-app/main/default/objects/aecm__Capability__c/fields/aecm__Strategic_Index_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Strategic_Index_Score__c</fullName>
    <formula>IF
(
AND(aecm__Active__c = True, ISPICKVAL(aecm__Strategic_Index__c, &quot;Not Acknowledged&quot;)), 1,
IF
(
AND(aecm__Active__c = True, ISPICKVAL(aecm__Strategic_Index__c, &quot;Tactical&quot;)), 2,
IF
(
AND(aecm__Active__c = True, ISPICKVAL(aecm__Strategic_Index__c, &quot;Occasionally Strategic&quot;)), 3,
IF
(
AND(aecm__Active__c = True, ISPICKVAL(aecm__Strategic_Index__c, &quot;Situationally Strategic&quot;)), 4,
IF
(
AND(aecm__Active__c = True, ISPICKVAL(aecm__Strategic_Index__c, &quot;Intentionally Strategic&quot;)), 5,
0
)))))



/* original formulaCASE( Strategic_Index__c , &quot;Not Acknowledged&quot;, 1, &quot;Tactical&quot;, 2,&quot;Occasionally Strategic&quot;,3,&quot;Situationally Strategic&quot;,4,&quot;Intentionally Strategic&quot;,5,0)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategic Index Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>