force-app/main/default/objects/aecm__Capability__c/fields/aecm__Total_Process_Cost__c.field-meta.xml
<CustomField>
    <fullName>aecm__Total_Process_Cost__c</fullName>
    <label>Total Process Cost</label>
    <summarizedField>aecm__Capability_Process__c.aecm__Z__c</summarizedField>
    <summaryForeignKey>aecm__Capability_Process__c.aecm__Capability__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>