force-app/main/default/objects/aecm__Capability__c/fields/YG_Capability_Pain_Point_Count__c.field-meta.xml
<CustomField>
    <fullName>YG_Capability_Pain_Point_Count__c</fullName>
    <label>Capability Pain Point Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>