force-app/main/default/objects/aecm__Capability__c/fields/YG_Pain_Point_Prioritization_Score__c.field-meta.xml
<CustomField>
    <fullName>YG_Pain_Point_Prioritization_Score__c</fullName>
    <label>Pain Point Prioritization Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>