force-app/main/default/objects/aecm__Capability__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <columns>NAME</columns>
    <columns>aecm__Active__c</columns>
    <columns>aecm__Overall_Score__c</columns>
    <columns>aecm__Capability_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Capabilities</label>
</ListView>