force-app/main/default/objects/aecm__Capability__c/listViews/aecm__Inactive_Capabilities.listView-meta.xml
<ListView>
    <fullName>aecm__Inactive_Capabilities</fullName>
    <columns>NAME</columns>
    <columns>aecm__Capability_Area__c</columns>
    <columns>aecm__Function__c</columns>
    <columns>aecm__Status__c</columns>
    <columns>aecm__Overall_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Capabilities</label>
</ListView>