force-app/main/default/objects/aecm__Capability__c/listViews/aecm__Least_Mature_Capabilities.listView-meta.xml
<ListView>
    <fullName>aecm__Least_Mature_Capabilities</fullName>
    <columns>NAME</columns>
    <columns>aecm__Capability_Area__c</columns>
    <columns>aecm__Overall_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>aecm__Overall_Score__c</field>
        <operation>lessOrEqual</operation>
        <value>4</value>
    </filters>
    <label>Least Mature Capabilities</label>
</ListView>