force-app/main/default/objects/aecm__Capability__c/listViews/aecm__Referral_Management_Capabilities.listView-meta.xml
<ListView>
    <fullName>aecm__Referral_Management_Capabilities</fullName>
    <columns>NAME</columns>
    <columns>aecm__Active__c</columns>
    <columns>aecm__Maturity__c</columns>
    <columns>aecm__Improvement_Priority__c</columns>
    <columns>aecm__Proactivity_Index__c</columns>
    <columns>aecm__Strategic_Index__c</columns>
    <columns>aecm__Status__c</columns>
    <columns>aecm__Overall_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Capability_Area__c</field>
        <operation>equals</operation>
        <value>Referral management</value>
    </filters>
    <label>Referral Management Capabilities</label>
</ListView>