force-app/main/default/objects/aecm__Capability__c/listViews/aecm__Service_Capabilities.listView-meta.xml
<ListView>
    <fullName>aecm__Service_Capabilities</fullName>
    <columns>aecm__Capability_Area__c</columns>
    <columns>NAME</columns>
    <columns>aecm__Active__c</columns>
    <columns>aecm__Maturity__c</columns>
    <columns>aecm__Improvement_Priority__c</columns>
    <columns>aecm__Proactivity_Index__c</columns>
    <columns>aecm__Strategic_Index__c</columns>
    <columns>aecm__Status__c</columns>
    <columns>aecm__Overall_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Capability_Area__c</field>
        <operation>startsWith</operation>
        <value>case,customer,field,interaction,knowledge</value>
    </filters>
    <label>Service Capabilities</label>
</ListView>